# park

./: .gitignore  MANIFEST.in  README.md  package.py  pyproject.toml  setup.cfg  setup.py
allzpark/: __main__.py  _rezapi.py  allzparkconfig.py  cli.py  control.py  core.py  delegates.py  dock.py  model.py  util.py  version.py  view.py
allzpark/resources/: style-dark.css  style-light.css
allzpark/rezplugins/command/: park.py  rezconfig.py
allzpark/workspaces/: avalon.py
src/allzpark/: _logging.py  _version.py  allzparkconfig.py  backend_avalon.py  backend_sg_sync.py  backends.md  cli.py  core.py  exceptions.py  report.py  util.py
src/allzpark/backends/: avalon.py
src/allzpark/cli/: __init__.py
src/allzpark/gui/: app.py  control.py  delegates.py  dock.py  model.py  models.py  pages.py  resources.py  view.py  widgets.py  widgets_avalon.py  widgets_sg_sync.py  window.py
src/allzpark/gui/resources/: allzpark-rc.qrc  compile_qrc.py  style-dark.css
src/allzpark/gui2/: app.py  common.py  control.py  models.py  widgets.py  widgets_avalon.py  window.py
src/allzpark/rezplugins/command/: park.py  rezconfig.py
src/allzpark/workspaces/: avalon.py
