[metadata]
name = allzpark
description = A cross-platform launcher for film and games projects, built on Rez
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mottosso/allzpark
author = Marcus Ottosson
author_email = konstruktion@gmail.com
maintainer = davidlatwe
maintainer_email = davidlatwe@gmail.com
license = LGPLv3
license_file = LICENCE.txt
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Utilities
    Topic :: Software Development
    Topic :: System :: Software Distribution
keywords = launcher package resolve version software management
project_urls =
    Source=https://github.com/mottosso/allzpark
    Tracker=https://github.com/mottosso/allzpark/issues

[options]
zip_safe = true
python_requires = >=3, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*
install_requires =
    six
    pyside2
packages = find:
package_dir =
    = .
include_package_data = true

[options.packages.find]
where = .
exclude =
    tests

[options.entry_points]
console_scripts =
    allzpark = allzpark.rezplugins.command.park:rez_cli
         azp = allzpark.rezplugins.command.park:rez_cli
    rez-park = allzpark.rezplugins.command.park:rez_cli

[options.package_data]
allzpark =
    resources/*.css
    resources/*.svg
    resources/*.png
    resources/fonts/*/*.ttf
    resources/fonts/*/*LICENSE*

[options.extras_require]
rez =
    rez
bleeding =
    bleeding-rez>=2.38.2
demo =
    allzparkdemo>=1
tests =
    pytest

[sdist]
formats = gztar

[bdist_wheel]
universal = true

[nosetests]
verbosity=3
detailed-errors=1
